# STEADY

./: .gitignore  README.md
Algorithm/: Dynamic Programming.md  Shortest Path.md
Algorithm/0-Playground/: helloworld  helloworld.cpp
Algorithm/Leetcode/: README.md
Bazel/: BUILD  README.md  WORKSPACE  bazel-Bazel  bazel-bin  bazel-testlogs  deps.bzl  go.mod
Bazel/greet/client/: BUILD.bazel  greet.go
Distributed Programming/: README.md
Docker/: Dockerfile  README.md  test.go
Docker/01 Images/: Dockerfile  README.md
Docker/02 Volumes/: README.md
Docker/03 Multi Container/: README.md  app.js
Flask/: app.py  config.py  run.py
Flask Backend/: README.md  app.py  config.py  run.py
GCP/: README.md
Go/: go.mod  test.go
Message Queue/: README.md
Network/: 00 Concepts.md  01 OSI Model.md  03 UDP and TCP.md
algorithm/: BFS-DFS.md  Dynamic Programming.md  Minimum Spanning Tree.md  Segment Tree.md  Shortest Path.md  Topological Sort.md  Union-Find.md
bazel/: WORKSPACE
bazel/greet/proto/: BUILD.bazel
computer vision/: .gitignore  01-image-basics.ipynb  01-image-basics.md  02-image-processing.ipynb  02-image-processing.md  03-opencv-video.ipynb  03-opencv-video.md
data-science/: 02-matplotlib.ipynb  03-seaborn.ipynb  04-movie-rating-project.ipynb  README.md
network/: 00 Concepts.md  02 Internet Protocol.md  04 Wireshirk.md
postgres/: 01-introduction.md  02-basic-sqls.md  02-database-and-table.md  03-database-and-table.md  04-postgre-architecture.md  05-query-tuning-and-CTE.md  06-views-and-scheme.md  06-views-concurrency.md
tools/: README.md
(+677 files in other folders)
