load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = [
        "greet.go",
        "main.go",
    ],
    importpath = "github.com/Cotidie/STEADY/gRPC/Basics/greet/client",
    visibility = ["//visibility:private"],
    deps = [
        "//greet/proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
